# MotionController

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  DispatcherMessage.hpp  MotionController.cpp  MotionController.hpp  MotionControllerInit.cpp  MotionControllerInit.hpp  MotionControllerPinning.h  main.cpp  queues.cpp  queues.h  queues.hpp
src/i2cDevices/: CMakeLists.txt  I2cBase.cpp  I2cBase.hpp  Icm42670p.cpp  Icm42670p.hpp  Tla2528.cpp  Tla2528.hpp  i2cBase.cpp  i2cBase.hpp  tla2528.cpp  tla2528.hpp
src/miscDevices/: AdaptiveLowPassFilter.cpp  AdaptiveLowPassFilter.hpp  ArduinoAdcSlave.cpp  ArduinoAdcSlave.hpp  DigitalInput.cpp  DigitalInput.hpp  DigitalOutput.cpp  DigitalOutput.hpp  HcSr04.cpp  HcSr04.hpp  HcSr04KalmanFilter.cpp  HcSr04KalmanFilter.hpp  Hcsr04.cpp  Hcsr04.hpp  LineSensor.cpp  LineSensor.hpp  LineSensorService.cpp  LineSensorService.hpp  MedianStack.cpp  MedianStack.hpp  MedianStack.tpp  digitalInput.cpp  digitalInput.hpp  hcsr04.cpp  hcsr04.hpp
src/services/: LineSensorService.cpp  LineSensorService.hpp  LoggerService.cpp  LoggerService.hpp  MedianStack.hpp  MedianStack.tpp  RingBuffer.hpp  RingBuffer.tpp  StepperService.cpp  StepperService.hpp  TestShell.cpp  TestShell.hpp
src/spiDevices/: CMakeLists.txt  SpiBase.cpp  SpiBase.hpp  StepperService.cpp  StepperService.hpp  TMC5240_HW_Abstraction.h  Tmc5240.cpp  Tmc5240.hpp  spiBase.cpp  spiBase.hpp  tmc5240.cpp  tmc5240.hpp
src/tasks/: BarrierHandlerTask.cpp  CMakeLists.txt  CheckSafetyButtonStm.cpp  CheckSafetyButtonStm.hpp  GripControllerComTask.cpp  HandleBarrierStm.cpp  HandleBarrierStm.hpp  LineFollowerStm.cpp  (+20 more)
(+63 files in other folders)
